refactor: se renomban metodos y clases de dto para mejorar claridad del codigo